Import library with ppl/core only and verify by IT
Signed-off-by: Chen Dai <daichen@amazon.com>